--- a/src/main/resource/index.tpl.html
+++ b/src/main/resource/index.tpl.html
@@ -82,9 +82,9 @@ body{
 				<li class="menu-close-off"><span class="fa fa-minus" aria-hidden="true" title="..."></span> <span>...</span></li>
 			</ul>
 		</div>
-		<div class="form-inline my-2 my-lg-0 search-custom side-search" style="padding: 5px;">
-			<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width: 65%">
-			<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
+		<div class="form-inline my-lg-0 search-custom side-search" style="padding: 5px;">
+			<input class="form-control mr-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width: 65%">
+			<button class="btn btn-outline-success my-sm-0 search-btn" type="submit">Search</button>
 		</div>
 		<div class="side-list">
 			<ul class="side-nav">#####MENU#####
@@ -93,7 +93,7 @@ body{
 	</aside>
 	<section class="menu-back-layout menu-close off"></section>
 	<div class="container-fluid main-container">
-		<!-- 메인 -->
+		<!-- ????????C -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-area-panel">
 			<div class="list-area">
 				#####LIST#####
@@ -103,7 +103,7 @@ body{
 	</div>
 	<footer>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer-bottom">
-			<p>Copyright © 2019 www.nowonbun.com(Email : <a href="mailto:nowonbun@gmail.com" target="_blank">nowonbun@gmail.com</a>)</p>
+			<p>Copyright ?? 2019 www.nowonbun.com(Email : <a href="mailto:nowonbun@gmail.com" target="_blank">nowonbun@gmail.com</a>)</p>
 		</div>
 	</footer>
 </body>
