--- a/src/main/resource/list.tpl.html
+++ b/src/main/resource/list.tpl.html
@@ -82,9 +82,9 @@ body{
 				<li class="menu-close-off"><span class="fa fa-minus" aria-hidden="true" title="..."></span> <span>...</span></li>
 			</ul>
 		</div>
-		<div class="form-inline my-2 my-lg-0 search-custom side-search" style="padding: 5px;">
-			<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width: 65%">
-			<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
+		<div class="form-inline my-lg-0 search-custom side-search" style="padding: 5px;">
+			<input class="form-control mr-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width: 65%">
+			<button class="btn btn-outline-success my-sm-0 search-btn" type="submit">Search</button>
 		</div>
 		<div class="side-list">
 			<ul class="side-nav">#####MENU#####
