--- a/src/main/resource/main.tpl.html
+++ b/src/main/resource/main.tpl.html
@@ -43,9 +43,9 @@ body{
 		<button class="menu-toggle" type="button">MENU</button>
 		<a class="navbar-brand navbar-brand-flex-left" href="./" style="color: #000;">明月の開発ストーリ</a>
 		<div class="collapse navbar-collapse navbar-collapse-flex-100" id="navbarSupportedContent">
-			<div class="form-inline my-2 my-lg-0 search-custom">
-				<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
+			<div class="form-inline my-lg-0 search-custom">
+				<input class="form-control mr-2 search-text" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-sm-0 search-btn" type="submit">Search</button>
 			</div>
 		</div>
 	</nav>
@@ -61,9 +61,9 @@ body{
 				<li class="menu-close-off"><span class="fa fa-minus" aria-hidden="true" title="..."></span> <span>...</span></li>
 			</ul>
 		</div>
-		<div class="form-inline my-2 my-lg-0 search-custom side-search" style="padding: 5px;">
-			<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width:65%">
-			<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
+		<div class="form-inline my-lg-0 search-custom side-search" style="padding: 5px;">
+			<input class="form-control mr-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width: 65%">
+			<button class="btn btn-outline-success my-sm-0 search-btn" type="submit">Search</button>
 		</div>
 		<div class="side-list">
 			<ul class="side-nav">
