--- a/src/main/resource/index.tpl.html
+++ b/src/main/resource/index.tpl.html
@@ -104,7 +104,7 @@ body{
 	</div>
 	<footer>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer-bottom">
-			<p>Copyright ?? 2019 www.nowonbun.com(Email : <a href="mailto:nowonbun@gmail.com" target="_blank">nowonbun@gmail.com</a>)</p>
+			<p>Copyright © 2019 www.nowonbun.com(Email : <a href="mailto:nowonbun@gmail.com" target="_blank">nowonbun@gmail.com</a>)</p>
 		</div>
 	</footer>
 </body>
