--- a/src/main/resource/post.tpl.html
+++ b/src/main/resource/post.tpl.html
@@ -12,6 +12,7 @@ body{
 	font-family: 'Noto Sans JP', 'Arial',sans-serif!important;
 }
 </style>
+<script type="application/ld+json">#####APPLICATIONJSON#####</script>
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
