--- a/src/main/resource/index.tpl.html
+++ b/src/main/resource/index.tpl.html
@@ -12,6 +12,7 @@ body{
 	font-family: 'Noto Sans JP', 'Arial',sans-serif!important;
 }
 </style>
+<script type="application/ld+json">#####APPLICATIONJSON#####</script>
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -96,7 +97,7 @@ body{
 	<div class="container-fluid main-container">
 		<!-- ????????C -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-area-panel">
-			<div class="list-area">
+			<div class="list-area" vocab="http://schema.org/" typeof="BreadcrumbList" resource="#####CANONICAL#####">
 				#####LIST#####
 			</div>
 		</div>
