--- a/src/main/resource/list.tpl.html
+++ b/src/main/resource/list.tpl.html
@@ -12,6 +12,7 @@ body{
 	font-family: 'Noto Sans JP', 'Arial',sans-serif!important;
 }
 </style>
+<script type="application/ld+json">#####APPLICATIONJSON#####</script>
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -104,7 +105,7 @@ body{
 					検索件数 : <span id="searchResultCount">#####SEARCHCOUNT#####</span> 件
 				</p>
 			</div>
-			<div class="list-area">
+			<div class="list-area" vocab="http://schema.org/" typeof="BreadcrumbList" resource="#####CANONICAL#####">
 				#####LIST#####
 			</div>
 		</div>
